--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -216,38 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sort\n",
-    "cars = ['Ford', 'BMW', 'Volvo']\n",
-    "cars.sort(reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 375,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Volvo', 'Ford', 'BMW']"
-      ]
-     },
-     "execution_count": 375,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -256,50 +225,74 @@
        "['BMW', 'Ford', 'Volvo']"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# sort\n",
+    "cars = ['Ford', 'BMW', 'Volvo']\n",
+    "cars.sort(reverse=True)\n",
     "sorted(cars,reverse=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 2, 3, 4, 5, 6]"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 2, 3, 4, 5, 6]\n",
+      "[3, 5, 7, 9, 11]\n",
+      "[3, 5, 7, 9, 11]\n",
+      "[3, 5, 7, 9, 11]\n"
+     ]
     }
    ],
    "source": [
+    "# concat 2 numbercal list into a new list\n",
     "a = [1,2,3,4,5]\n",
     "b = [2,3,4,5,6]\n",
+    "print(a+b)\n",
     "\n",
-    "a+b"
+    "joinedList = [*a, *b]\n",
+    "print(joinedList)\n",
+    "\n",
+    "# sum 2 numberical list into a new list\n",
+    "print([x + y for x, y in zip(a, b)])\n",
+    "\n",
+    "import operator\n",
+    "print(list(map(operator.add, a,b)))\n",
+    "\n",
+    "import numpy as np\n",
+    "print(np.add(a, b).tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'Apple': 3, 'Banana': 1, 'Pear': 1, 'Pineapple': 1})\n",
+      "Counter({'Apple': 3, 'Pineapple': 2, 'Banana': 1, 'Pear': 1})\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[('Apple', 3), ('Pineapple', 2), ('Banana', 1)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,12 +303,12 @@
     "# Create a counter of the fruits eaten today\n",
     "fruit_eaten = Counter(['Apple', 'Apple', 'Apple', 'Banana', 'Pear', 'Pineapple'])\n",
     "# View counter\n",
-    "fruit_eaten\n",
+    "print(fruit_eaten)\n",
     "\n",
     "# Update the count for 'Pineapple' (because you just ate an pineapple)\n",
     "fruit_eaten.update(['Pineapple'])\n",
     "# View the counter\n",
-    "fruit_eaten\n",
+    "print(fruit_eaten)\n",
     "\n",
     "# View the items with the top 3 counts\n",
     "fruit_eaten.most_common(3)"
@@ -330,7 +323,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method_descriptor:\n",
+      "\n",
+      "extend(self, iterable, /)\n",
+      "    Extend list by appending elements from the iterable.\n",
+      "\n",
+      "Help on method_descriptor:\n",
+      "\n",
+      "append(self, object, /)\n",
+      "    Append object to the end of the list.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(list.extend)\n",
+    "help(list.append)\n",
+    "\n",
+    "dir(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +361,7 @@
        "['BMW', 'Ford', 'Volvo']"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +484,7 @@
        "Yuma          Amy  2014       3"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +518,7 @@
        "2012"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,14 +600,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert a row by index\n",
+    "# add a row in the dataframe using loc[] & list\n",
     "df.loc['April'] = ['Wang',2013,5]\n",
+    "# add a row in the dataframe at index position using iloc[]\n",
+    "# df.iloc[len(df)] = ['Wang',2013,5]\n",
     "\n",
-    "# insert a row by append function\n",
+    "# add multiple rows in the dataframe using dataframe.append() and Series\n",
+    "listOfSeries = [pd.Series(['Raju', 2017, 4], index=df.columns) ,\n",
+    "                pd.Series(['Sam', 2017, 5], index=df.columns ) ,\n",
+    "                pd.Series(['Rocky', 2016, 6], index=df.columns)]\n",
+    "\n",
+    "df = df.append(listOfSeries) # ignore_index=True\n",
+    "\n",
+    "# add row in the dataframe using dataframe.append() and Dictionary\n",
     "row = pd.Series({'year':2013,'name':'Zhu','reports':30},name='Maggie')\n",
     "df = df.append(row)"
    ]
@@ -2714,7 +2745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
