--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -263,7 +263,7 @@
     "joinedList = [*a, *b]\n",
     "print(joinedList)\n",
     "\n",
-    "# sum 2 numberical list into a new list\n",
+    "# sum 2 numerical list into a new list\n",
     "print([x + y for x, y in zip(a, b)])\n",
     "\n",
     "import operator\n",
