--- a/Unorganized/Work Needed.ipynb
+++ b/Unorganized/Work Needed.ipynb
@@ -35,14 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-06-01 2018-08-29\n"
+      "2019-01-08 2019-01-06\n",
+      "2019-01-08 2019-01-06\n"
      ]
     }
    ],
@@ -52,24 +53,95 @@
     "from datetime import timedelta\n",
     "from datetime import date\n",
     "\n",
-    "now = str(date.today())\n",
-    "start = datetime.strptime(now, date_format)+timedelta(days=-2)\n",
-    "start.strftime(date_format)\n",
+    "now = date.today() #datetime.now()\n",
+    "yesterday = now + timedelta(days=-2)\n",
+    "print(now, yesterday.strftime(date_format))\n",
     "\n",
-    "now = datetime.now()\n",
-    "start = now + timedelta(days=-90)\n",
-    "start = start.strftime(date_format)\n",
-    "end = now + timedelta(days=-1)\n",
-    "end = end.strftime(date_format)\n",
-    "\n",
-    "print(start,end)"
+    "print(now, yesterday)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Arrived</th>\n",
+       "      <th>Left</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>2017-01-06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Arrived       Left\n",
+       "0 2017-01-01 2017-01-01\n",
+       "1 2017-01-04 2017-01-06"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create data frame\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame()\n",
+    "\n",
+    "# Create two datetime features\n",
+    "df['Arrived'] = [pd.Timestamp('01-01-2017'), pd.Timestamp('01-04-2017')]\n",
+    "df['Left'] = [pd.Timestamp('01-01-2017'), pd.Timestamp('01-06-2017')]\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0   0 days\n",
+      "1   2 days\n",
+      "dtype: timedelta64[ns]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -78,22 +150,15 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create data frame\n",
-    "df = pd.DataFrame()\n",
-    "\n",
-    "# Create two datetime features\n",
-    "df['Arrived'] = [pd.Timestamp('01-01-2017'), pd.Timestamp('01-04-2017')]\n",
-    "df['Left'] = [pd.Timestamp('01-01-2017'), pd.Timestamp('01-06-2017')]\n",
-    "\n",
     "# Calculate Difference (Method 1)\n",
     "# Calculate duration between features\n",
-    "df['Left'] - df['Arrived']\n",
+    "print(df['Left'] - df['Arrived'])\n",
     "\n",
     "# Calculate Difference (Method 2)\n",
     "# Calculate duration between features\n",
@@ -216,7 +281,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 374,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort\n",
+    "cars = ['Ford', 'BMW', 'Volvo']\n",
+    "cars.sort(reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Volvo', 'Ford', 'BMW']"
+      ]
+     },
+     "execution_count": 375,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -225,74 +321,50 @@
        "['BMW', 'Ford', 'Volvo']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# sort\n",
-    "cars = ['Ford', 'BMW', 'Volvo']\n",
-    "cars.sort(reverse=True)\n",
     "sorted(cars,reverse=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5, 2, 3, 4, 5, 6]\n",
-      "[1, 2, 3, 4, 5, 2, 3, 4, 5, 6]\n",
-      "[3, 5, 7, 9, 11]\n",
-      "[3, 5, 7, 9, 11]\n",
-      "[3, 5, 7, 9, 11]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# concat 2 numbercal list into a new list\n",
     "a = [1,2,3,4,5]\n",
     "b = [2,3,4,5,6]\n",
-    "print(a+b)\n",
     "\n",
-    "joinedList = [*a, *b]\n",
-    "print(joinedList)\n",
-    "\n",
-    "# sum 2 numerical list into a new list\n",
-    "print([x + y for x, y in zip(a, b)])\n",
-    "\n",
-    "import operator\n",
-    "print(list(map(operator.add, a,b)))\n",
-    "\n",
-    "import numpy as np\n",
-    "print(np.add(a, b).tolist())"
+    "a+b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counter({'Apple': 3, 'Banana': 1, 'Pear': 1, 'Pineapple': 1})\n",
-      "Counter({'Apple': 3, 'Pineapple': 2, 'Banana': 1, 'Pear': 1})\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[('Apple', 3), ('Pineapple', 2), ('Banana', 1)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,12 +375,12 @@
     "# Create a counter of the fruits eaten today\n",
     "fruit_eaten = Counter(['Apple', 'Apple', 'Apple', 'Banana', 'Pear', 'Pineapple'])\n",
     "# View counter\n",
-    "print(fruit_eaten)\n",
+    "fruit_eaten\n",
     "\n",
     "# Update the count for 'Pineapple' (because you just ate an pineapple)\n",
     "fruit_eaten.update(['Pineapple'])\n",
     "# View the counter\n",
-    "print(fruit_eaten)\n",
+    "fruit_eaten\n",
     "\n",
     "# View the items with the top 3 counts\n",
     "fruit_eaten.most_common(3)"
@@ -323,36 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method_descriptor:\n",
-      "\n",
-      "extend(self, iterable, /)\n",
-      "    Extend list by appending elements from the iterable.\n",
-      "\n",
-      "Help on method_descriptor:\n",
-      "\n",
-      "append(self, object, /)\n",
-      "    Append object to the end of the list.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(list.extend)\n",
-    "help(list.append)\n",
-    "\n",
-    "dir(list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +404,7 @@
        "['BMW', 'Ford', 'Volvo']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +527,7 @@
        "Yuma          Amy  2014       3"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +561,7 @@
        "2012"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,23 +643,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add a row in the dataframe using loc[] & list\n",
+    "# insert a row by index\n",
     "df.loc['April'] = ['Wang',2013,5]\n",
-    "# add a row in the dataframe at index position using iloc[]\n",
-    "# df.iloc[len(df)] = ['Wang',2013,5]\n",
     "\n",
-    "# add multiple rows in the dataframe using dataframe.append() and Series\n",
-    "listOfSeries = [pd.Series(['Raju', 2017, 4], index=df.columns) ,\n",
-    "                pd.Series(['Sam', 2017, 5], index=df.columns ) ,\n",
-    "                pd.Series(['Rocky', 2016, 6], index=df.columns)]\n",
-    "\n",
-    "df = df.append(listOfSeries) # ignore_index=True\n",
-    "\n",
-    "# add row in the dataframe using dataframe.append() and Dictionary\n",
+    "# insert a row by append function\n",
     "row = pd.Series({'year':2013,'name':'Zhu','reports':30},name='Maggie')\n",
     "df = df.append(row)"
    ]
@@ -2745,7 +2779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
